--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -69,17 +69,11 @@
       <setting name="s_g_PixelOffsetMode" serializeAs="String">
         <value>3</value>
       </setting>
-      <setting name="s_BACKCOLOR" serializeAs="String">
-        <value />
-      </setting>
       <setting name="s_SaveHasDateTime" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="s_BaseDelay" serializeAs="String">
         <value>200</value>
-      </setting>
-      <setting name="s_Delay" serializeAs="String">
-        <value>0</value>
       </setting>
       <setting name="s_HighHandle" serializeAs="String">
         <value>False</value>
@@ -96,17 +90,11 @@
       <setting name="s_ButtonSize" serializeAs="String">
         <value>40</value>
       </setting>
-      <setting name="s_HandleSize" serializeAs="String">
-        <value>20</value>
-      </setting>
       <setting name="s_ToolbarPanel" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="s_handlePrintScreen" serializeAs="String">
         <value>True</value>
-      </setting>
-      <setting name="s_MoveToTools" serializeAs="String">
-        <value>False</value>
       </setting>
       <setting name="s_CanvasTransparency" serializeAs="String">
         <value>0.5</value>
@@ -144,9 +132,6 @@
       <setting name="s_LastPreviewMode" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="s_AddDateToSaveFileName" serializeAs="String">
-        <value>False</value>
-      </setting>
       <setting name="s_AllowDragaround" serializeAs="String">
         <value>True</value>
       </setting>
@@ -155,6 +140,45 @@
       </setting>
       <setting name="s_DragaroundY" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="s_DPI" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+        </value>
+      </setting>
+      <setting name="s_DPIType" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_UseMonitorForDpi" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_DrawCrosshairs" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_DrawPosiData" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_DrawRulerBackground" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_AlwaysHaveRuler" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_HandleSize" serializeAs="String">
+        <value>20</value>
+      </setting>
+      <setting name="s_Delay" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_MoveToTools" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_QuickSaveDir" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_SaveToTable" serializeAs="String">
+        <value />
       </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
