--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -93,6 +94,7 @@
     <Compile Include="c_PointStorage.cs" />
     <Compile Include="c_RenderHandler.cs" />
     <Compile Include="c_returnGraphicSettings.cs" />
+    <Compile Include="c_Unsafe.cs" />
     <Compile Include="c_WindingFunctions.cs" />
     <Compile Include="ExtBitmap.cs" />
     <Compile Include="Form1.cs">
@@ -161,6 +163,12 @@
     <Compile Include="f_SettingPanel.Designer.cs">
       <DependentUpon>f_SettingPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Settings.Designer.cs">
+      <DependentUpon>f_Settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_TagEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,22 +183,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="c_GetDPI.cs" />
     <Compile Include="Properties\tagLog.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>tagLog.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="uc_ButtonSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="uc_ButtonSelector.Designer.cs">
       <DependentUpon>uc_ButtonSelector.cs</DependentUpon>
     </Compile>
-    <Compile Include="uc_CutoutHolder.cs">
+    <Compile Include="uc_TrackBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="uc_CutoutHolder.Designer.cs">
-      <DependentUpon>uc_CutoutHolder.cs</DependentUpon>
+    <Compile Include="uc_TrackBar.Designer.cs">
+      <DependentUpon>uc_TrackBar.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -225,6 +235,9 @@
     <EmbeddedResource Include="f_SettingPanel.resx">
       <DependentUpon>f_SettingPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="f_Settings.resx">
+      <DependentUpon>f_Settings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="f_TagEditor.resx">
       <DependentUpon>f_TagEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -244,8 +257,8 @@
     <EmbeddedResource Include="uc_ButtonSelector.resx">
       <DependentUpon>uc_ButtonSelector.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="uc_CutoutHolder.resx">
-      <DependentUpon>uc_CutoutHolder.cs</DependentUpon>
+    <EmbeddedResource Include="uc_TrackBar.resx">
+      <DependentUpon>uc_TrackBar.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
