Added mutiple table handling Added Tooltips Added new settings Added backup image handling for editing later

--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -180,6 +180,15 @@
       <setting name="s_SaveToTable" serializeAs="String">
         <value />
       </setting>
+      <setting name="s_ShowTooltipOnMouseOver" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ShowTooltipOnCutout" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_KeepEditImage" serializeAs="String">
+        <value>False</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
