--- a/WolfPaw ScreenSnip/packages.config
+++ b/WolfPaw ScreenSnip/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="FontAwesome.Sharp" version="4.7.0" targetFramework="net45" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
