--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -49,7 +49,7 @@
         <value>0</value>
       </setting>
       <setting name="s_lastSaveDir" serializeAs="String">
-        <value />
+        <value>%UserProfile%/Pictures/ScreenSnip</value>
       </setting>
       <setting name="s_hasDelay" serializeAs="String">
         <value>False</value>
@@ -143,7 +143,8 @@
       </setting>
       <setting name="s_DPI" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
         </value>
       </setting>
       <setting name="s_DPIType" serializeAs="String">
