--- a/Up2Site/App.config
+++ b/Up2Site/App.config
@@ -10,24 +10,30 @@
     </startup>
 	<userSettings>
         <Up2Site.Properties.Settings>
-            <setting name="s_ProjectFolder" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="s_LastVersion" serializeAs="String">
-                <value>0.0.0.0</value>
-            </setting>
-            <setting name="s_LastUploadAttempt" serializeAs="String">
-                <value>2000-01-01</value>
-            </setting>
-            <setting name="s_WasLastUploadSuccess" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_Overwrite" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="s_AutoGetVersionNum" serializeAs="String">
-                <value />
-            </setting>
+               <setting name="s_x64_Folder" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="s_LastVersion" serializeAs="String">
+                      <value>0.0.0.0</value>
+               </setting>
+               <setting name="s_LastUploadAttempt" serializeAs="String">
+                      <value>2000-01-01</value>
+               </setting>
+               <setting name="s_WasLastUploadSuccess" serializeAs="String">
+                      <value>False</value>
+               </setting>
+               <setting name="s_LastUploadSuccess" serializeAs="String">
+                      <value>2000-01-01</value>
+               </setting>
+               <setting name="s_x86_Folder" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="s_LastErrorMessage" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="s_LastErrorLog" serializeAs="String">
+                      <value />
+               </setting>
         </Up2Site.Properties.Settings>
     </userSettings>
 </configuration>
