--- a/Up2Site/Properties/Settings.settings
+++ b/Up2Site/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Up2Site.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="s_ProjectFolder" Type="System.String" Scope="User">
+    <Setting Name="s_x64_Folder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="s_LastVersion" Type="System.String" Scope="User">
@@ -14,10 +14,16 @@
     <Setting Name="s_WasLastUploadSuccess" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="s_Overwrite" Type="System.String" Scope="User">
+    <Setting Name="s_LastUploadSuccess" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">2000-01-01</Value>
+    </Setting>
+    <Setting Name="s_x86_Folder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="s_AutoGetVersionNum" Type="System.String" Scope="User">
+    <Setting Name="s_LastErrorMessage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="s_LastErrorLog" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
