--- a/PerpetualUpdater/App.config
+++ b/PerpetualUpdater/App.config
@@ -20,7 +20,7 @@
                 <value />
             </setting>
             <setting name="s_LastCheck" serializeAs="String">
-                <value />
+                <value>2020-01-01</value>
             </setting>
             <setting name="s_Architecture" serializeAs="String">
                 <value />
@@ -51,6 +51,9 @@
             </setting>
             <setting name="s_StartMinimized" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="s_FirstTime" serializeAs="String">
+                <value>True</value>
             </setting>
         </PerpetualUpdater.Properties.Settings>
     </userSettings>
