Fixed some issues in settings Updated layer management Added garbage collection to some places fixed button positioning

--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -132,14 +132,8 @@
       <setting name="s_LastPreviewMode" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="s_AllowDragaround" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="s_DragaroundX" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="s_DragaroundY" serializeAs="String">
-        <value>True</value>
+      <setting name="s_DragaroundSetting" serializeAs="String">
+        <value>0</value>
       </setting>
       <setting name="s_DPI" serializeAs="Xml">
         <value>
