--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -128,6 +128,8 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="buttons.cs" />
+    <Compile Include="CustomPanelButton.cs" />
     <Compile Include="c_Converter.cs" />
     <Compile Include="c_DatabaseHandler.cs" />
     <Compile Include="c_DrawnPoints.cs" />
@@ -203,11 +205,11 @@
     <Compile Include="f_SearchBy.Designer.cs">
       <DependentUpon>f_SearchBy.cs</DependentUpon>
     </Compile>
-    <Compile Include="f_SettingPanel.cs">
+    <Compile Include="f_ToolsPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="f_SettingPanel.Designer.cs">
-      <DependentUpon>f_SettingPanel.cs</DependentUpon>
+    <Compile Include="f_ToolsPanel.Designer.cs">
+      <DependentUpon>f_ToolsPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="f_Settings.cs">
       <SubType>Form</SubType>
@@ -227,6 +229,9 @@
     <Compile Include="f_TCP.Designer.cs">
       <DependentUpon>f_TCP.cs</DependentUpon>
     </Compile>
+    <Compile Include="uc_myTSMI.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="c_GetDPI.cs" />
@@ -241,6 +246,12 @@
     </Compile>
     <Compile Include="uc_ButtonSelector.Designer.cs">
       <DependentUpon>uc_ButtonSelector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="uc_ColorButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="uc_ColorButton.Designer.cs">
+      <DependentUpon>uc_ColorButton.cs</DependentUpon>
     </Compile>
     <Compile Include="uc_TextBox.cs">
       <SubType>UserControl</SubType>
@@ -284,8 +295,8 @@
     <EmbeddedResource Include="f_SearchBy.resx">
       <DependentUpon>f_SearchBy.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="f_SettingPanel.resx">
-      <DependentUpon>f_SettingPanel.cs</DependentUpon>
+    <EmbeddedResource Include="f_ToolsPanel.resx">
+      <DependentUpon>f_ToolsPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Settings.resx">
       <DependentUpon>f_Settings.cs</DependentUpon>
