--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -128,22 +128,24 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="buttons.cs" />
-    <Compile Include="CustomPanelButton.cs" />
+    <Compile Include="Classes\Control\buttons.cs" />
+    <Compile Include="Classes\Control\CustomPanelButton.cs" />
     <Compile Include="c_Converter.cs" />
     <Compile Include="c_DatabaseHandler.cs" />
     <Compile Include="c_DrawnPoints.cs" />
-    <Compile Include="c_EditLayer.cs" />
+    <Compile Include="Classes\EditLayer\c_EditLayer.cs" />
+    <Compile Include="Classes\EditLayer\c_EditLayerElement.cs" />
     <Compile Include="c_Geometry.cs" />
-    <Compile Include="c_ImageHolder.cs" />
+    <Compile Include="Classes\Image\c_ImageHolder.cs" />
     <Compile Include="c_ImgGen.cs" />
     <Compile Include="c_KeyboardHook.cs" />
     <Compile Include="c_Object.cs" />
     <Compile Include="c_PointStorage.cs" />
-    <Compile Include="c_RenderHandler.cs" />
+    <Compile Include="Classes\Image\c_RenderHandler.cs" />
     <Compile Include="c_returnGraphicSettings.cs" />
     <Compile Include="c_Unsafe.cs" />
     <Compile Include="c_WindingFunctions.cs" />
+    <Compile Include="Classes\EditLayer\elementTypes.cs" />
     <Compile Include="ExtBitmap.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -156,6 +158,12 @@
     </Compile>
     <Compile Include="f_Canvas.Designer.cs">
       <DependentUpon>f_Canvas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_DPISetup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_DPISetup.Designer.cs">
+      <DependentUpon>f_DPISetup.cs</DependentUpon>
     </Compile>
     <Compile Include="f_EditSelection.cs">
       <SubType>Form</SubType>
@@ -229,7 +237,21 @@
     <Compile Include="f_TCP.Designer.cs">
       <DependentUpon>f_TCP.cs</DependentUpon>
     </Compile>
-    <Compile Include="uc_myTSMI.cs">
+    <Compile Include="Classes\Comparers\intComparer.cs" />
+    <Compile Include="Classes\Comparers\intComparerDesc.cs" />
+    <Compile Include="UserControls\uc_ValueButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\uc_ValueButton.Designer.cs">
+      <DependentUpon>uc_ValueButton.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\myPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UserControls\uc_myToolstrip.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UserControls\uc_myTSMI.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
@@ -241,28 +263,28 @@
       <DependentUpon>tagLog.settings</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
-    <Compile Include="uc_ButtonSelector.cs">
+    <Compile Include="UserControls\uc_ButtonSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="uc_ButtonSelector.Designer.cs">
+    <Compile Include="UserControls\uc_ButtonSelector.Designer.cs">
       <DependentUpon>uc_ButtonSelector.cs</DependentUpon>
     </Compile>
-    <Compile Include="uc_ColorButton.cs">
+    <Compile Include="UserControls\uc_ColorButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="uc_ColorButton.Designer.cs">
+    <Compile Include="UserControls\uc_ColorButton.Designer.cs">
       <DependentUpon>uc_ColorButton.cs</DependentUpon>
     </Compile>
-    <Compile Include="uc_TextBox.cs">
+    <Compile Include="UserControls\uc_TextBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="uc_TextBox.Designer.cs">
+    <Compile Include="UserControls\uc_TextBox.Designer.cs">
       <DependentUpon>uc_TextBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="uc_TrackBar.cs">
+    <Compile Include="UserControls\uc_TrackBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="uc_TrackBar.Designer.cs">
+    <Compile Include="UserControls\uc_TrackBar.Designer.cs">
       <DependentUpon>uc_TrackBar.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
@@ -270,6 +292,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Canvas.resx">
       <DependentUpon>f_Canvas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_DPISetup.resx">
+      <DependentUpon>f_DPISetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_EditSelection.resx">
       <DependentUpon>f_EditSelection.cs</DependentUpon>
@@ -317,13 +342,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="uc_ButtonSelector.resx">
+    <EmbeddedResource Include="UserControls\uc_ValueButton.resx">
+      <DependentUpon>uc_ValueButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\uc_ButtonSelector.resx">
       <DependentUpon>uc_ButtonSelector.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="uc_TextBox.resx">
+    <EmbeddedResource Include="UserControls\uc_TextBox.resx">
       <DependentUpon>uc_TextBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="uc_TrackBar.resx">
+    <EmbeddedResource Include="UserControls\uc_TrackBar.resx">
       <DependentUpon>uc_TrackBar.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="..\.editorconfig">
@@ -481,6 +509,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\database_up.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Classes\Misc\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clock.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
