--- a/PerpetualUpdater/App.config
+++ b/PerpetualUpdater/App.config
@@ -55,6 +55,9 @@
             <setting name="s_FirstTime" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="s_WarnAtHide" serializeAs="String">
+                <value>True</value>
+            </setting>
         </PerpetualUpdater.Properties.Settings>
     </userSettings>
 </configuration>
