--- a/PerpetualUpdater/Properties/Settings.settings
+++ b/PerpetualUpdater/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="s_FirstTime" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="s_WarnAtHide" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
