--- a/WolfPaw ScreenSnip/packages.config
+++ b/WolfPaw ScreenSnip/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Imaging" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
   <package id="FontAwesome.Sharp" version="5.14.1" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net45" />
