--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SharpSnip.Properties.user_settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="SharpSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="WolfPaw_ScreenSnip.Properties.tagLog" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="WolfPaw_ScreenSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
@@ -13,6 +15,181 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <userSettings>
+    <SharpSnip.Properties.user_settings>
+      <setting name="username" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="userid" serializeAs="String">
+        <value />
+      </setting>
+    </SharpSnip.Properties.user_settings>
+    <SharpSnip.Properties.Settings>
+      <setting name="s_hasBgColor" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_bgColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="s_hasBorder" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_borderWidth" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="s_borderColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_drawColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_font" serializeAs="String">
+        <value>Arial, 14.25pt</value>
+      </setting>
+      <setting name="s_textColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_lastTool" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_lastSaveDir" serializeAs="String">
+        <value>%UserProfile%/Pictures/ScreenSnip</value>
+      </setting>
+      <setting name="s_hasDelay" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_delayLength" serializeAs="String">
+        <value>3000</value>
+      </setting>
+      <setting name="s_lastSaveFormat" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_g_SmoothingMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_g_InterpolationMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_g_PixelOffsetMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_SaveHasDateTime" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_BaseDelay" serializeAs="String">
+        <value>200</value>
+      </setting>
+      <setting name="s_HighHandle" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ClearRequireAuth" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_UseCleanButtons" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_DBFileLocation" serializeAs="String">
+        <value>%this%\db.sqlite</value>
+      </setting>
+      <setting name="s_ButtonSize" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="s_ToolbarPanel" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_handlePrintScreen" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_CanvasTransparency" serializeAs="String">
+        <value>0.5</value>
+      </setting>
+      <setting name="s_CanvasColor" serializeAs="String">
+        <value>Silver</value>
+      </setting>
+      <setting name="s_RememberLastPosition" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_LastPosition" serializeAs="String">
+        <value>0, 0</value>
+      </setting>
+      <setting name="s_LastUsedMode" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_HandleShortcuts" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ScreenBGColor" serializeAs="String">
+        <value>Gainsboro</value>
+      </setting>
+      <setting name="s_CutoutPanelColor" serializeAs="String">
+        <value>ActiveCaption</value>
+      </setting>
+      <setting name="s_CutoutSelectionColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_CutoutMouseOverColor" serializeAs="String">
+        <value>180, 180, 180</value>
+      </setting>
+      <setting name="s_ShowPreview" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_LastPreviewMode" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_DragaroundSetting" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_DPI" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+        </value>
+      </setting>
+      <setting name="s_DPIType" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_UseMonitorForDpi" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_DrawCrosshairs" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_DrawPosiData" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_DrawRulerBackground" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_AlwaysHaveRuler" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_HandleSize" serializeAs="String">
+        <value>20</value>
+      </setting>
+      <setting name="s_MoveToTools" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_QuickSaveDir" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_SaveToTable" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_ShowTooltipOnMouseOver" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ShowTooltipOnCutout" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_KeepEditImage" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_Username" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_UserId" serializeAs="String">
+        <value />
+      </setting>
+    </SharpSnip.Properties.Settings>
     <WolfPaw_ScreenSnip.Properties.tagLog>
       <setting name="LOG" serializeAs="Xml">
         <value>
